--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,8 @@
             "env": {
             },
             "args": [
-                "-config","D:/tools/config.yaml",
-                "-endpoint","opc.tcp://DESKTOP-8H4V8KM:21381/MatrikonOpcUaWrapper",
+                "-config","./config/config.yaml",
+                "-endpoint","opc.tcp://172.31.145.93:21381/MatrikonOpcUaWrappe",
                 "-security-mode","None",
                 "-security-policy","None",
                 "-username","test",
